gl31-master/src/test/deca/context/invalid/complet/bad_herit2.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 9: Erreur, B n'a pas été déclaré avant A
//
// Historique:
//    cree le 20/01/2021
class A extends B{}
class B{}
